temp eee