@@ -2,7 +2,9 @@ package com.cacheserverdeploy.deploy;
 
 import com.filetool.util.GeneticAlgorithm;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Arrays;
 
 public class Deploy {
     /**
@@ -22,7 +24,7 @@ public class Deploy {
     public static class evaluate {
         public double error;
         public int cost;
-        public ArrayList<List> list;
+        public ArrayList<String> list;
     }
 
     static int E;  //边的个数
@@ -33,6 +35,9 @@ public class Deploy {
     static int T;  //超级汇点
     static int costServer;  //服务器单价
     public static int numServer;
+    static int lines; //文件行数
+    static int num_T;
+    static List<String> link=new ArrayList<String>();
     static edge[] e;
     static int en = 0;
     static int[] head;
@@ -40,7 +45,7 @@ public class Deploy {
     static int[] dist;
     static boolean[] visited;
     public static ArrayList<Integer> T_list = new ArrayList<Integer>();
-    static ArrayList<Integer> T_cost = new ArrayList<Integer>();
+    public static ArrayList<Integer> T_cost = new ArrayList<Integer>();
 
     static public void add(int x, int y, int f, int c) {
         if (e[en] == null) e[en] = new edge();
@@ -58,8 +63,7 @@ public class Deploy {
     }
 
     static public boolean SPFA(int s, int t, int n) {
-        int distSum = 0;
-        Deque<Integer> queue = new LinkedList<Integer>();
+        List<Integer> list = new ArrayList<Integer>();
         for (int i = 0; i < n; i++) {
             pre[i] = -1;
             visited[i] = false;
@@ -67,35 +71,20 @@ public class Deploy {
         }
         visited[s] = true;
         dist[s] = 0;
-        queue.add(s);
-        int num = 1;
-        while (queue.size() != 0) {
-            float avgDis = (float) distSum / num;
-            int current = queue.getFirst();
-            System.out.println(dist[current]);
-
-            while (queue.size() != 0 && avgDis < dist[current]) {
-                queue.addLast(current);
-                queue.removeFirst();
-                current = queue.pollFirst();
-            }
-
+        list.add(s);
+        while (list.size() != 0) {
+            int current = list.get(0);
+            list.remove(0);
             visited[current] = false;
-            distSum -= dist[current];
             for (int i = head[current]; i != -1; i = e[i].next) {
                 if (e[i].cap != 0) {
                     int v = e[i].to;
                     if (dist[v] > dist[current] + e[i].cost) {
                         dist[v] = dist[current] + e[i].cost;
-//                        if (dist[t] != Integer.MAX_VALUE) {
-//                            return true;
-//                        }
                         pre[v] = i;
                         if (!visited[v]) {
-                            distSum += dist[v];
                             visited[v] = true;
-                            num++;
-                            queue.add(v);
+                            list.add(v);
                         }
                     }
                 }
@@ -108,8 +97,8 @@ public class Deploy {
         int mincost = 0;  //最小费用
         int flow = 0;
         int[] output = new int[T_cost.size()]; //初始化为0,每个消费节点获得的流量总数
-        for (int i = 0; i < T_cost.size(); i++) output[i] = 0;
-        ArrayList<List> string = new ArrayList<List>();
+//        for (int i = 0; i < T_cost.size(); i++) output[i] = 0;
+        ArrayList<String> string = new ArrayList<String>();
         while (SPFA(s, t, n)) {
             int minflow = Integer.MAX_VALUE;         //路径最小流量
             ArrayList<Integer> path = new ArrayList<Integer>();
@@ -124,37 +113,26 @@ public class Deploy {
             }
 //			System.out.println(path);
             if (minflow != Integer.MAX_VALUE) {
-
-                List<Integer> line = new ArrayList<Integer>();
-
-                for (int i = 1; i < path.size(); i++) {
-                    line.add(path.get(i));
-//                    string.add(path.get(i) + "");
+                for (int i =1;i< path.size();i++) {
+                    string.add(path.get(i) + "");
                 }
-                int ss = line.get(line.size() - 1);
-                int index = T_list.indexOf(ss);
-
-                line.add(index);
-                line.add(minflow);
-
-                string.add(line);
-
-//                string.add(index + "");
-//                string.add(minflow + "");
-//                string.add("\r\n");
+                String ss = string.get(string.size() - 1);
+                int index = T_list.indexOf(Integer.parseInt(ss));
+                string.add(index + "");
+                string.add(minflow + "");
+                string.add("\r\n");
             }
             mincost += dist[t] * minflow;
             if (T_list.contains(path.get(0))) {
-                int index = T_list.indexOf(path.get(0));
-                output[index] += minflow;
+                int ind = T_list.indexOf(path.get(0));
+                output[ind] += minflow;
             }
         }
-        int sum_error = 0;
-        for (int i = 0; i < T_cost.size(); i++) sum_error += T_cost.get(i) - output[i];
-        double error = sum_error / T_cost.size();
+        double sum_error = 0.0;
+        for (int i = 0; i < T_cost.size(); i++) sum_error += (T_cost.get(i) - output[i]);
         evaluate out = new evaluate();
         out.cost = mincost + numServer * costServer;
-        out.error = error;
+        out.error = sum_error;
         out.list = string;
         return out;
     }
@@ -162,12 +140,28 @@ public class Deploy {
     private static void readData(String[] graphContent) {
 
         //文件设置
-        int lines = graphContent.length;
+        lines = graphContent.length;
         String[] arr1 = graphContent[0].split("\\s");
         NN = Integer.valueOf(arr1[0]);  //节点的个数
         E = Integer.valueOf(arr1[1]);  //节点的个数
-        int num_T = Integer.valueOf(arr1[2]); //消费节点的个数
+        num_T = Integer.valueOf(arr1[2]); //消费节点的个数
         costServer = Integer.valueOf(graphContent[2]);  //单位服务器价格
+        T_list = new ArrayList<Integer>();
+        T_cost = new ArrayList<Integer>();
+        for (int i = 4; i < lines - num_T - 1; i++) {
+            link.add(graphContent[i]);
+        }
+        for (int i = lines - num_T; i < lines; i++) {
+            String[] s = graphContent[i].split("\\s");
+            int a = Integer.valueOf(s[1]);
+            int b = Integer.valueOf(s[2]);
+            T_list.add(a);
+            T_cost.add(b);
+        }
+    }
+
+
+    public static evaluate calC(ArrayList<Integer> server) {
         //*************************************************//
         EE = E * 1000;
         e = new edge[EE];
@@ -180,43 +174,16 @@ public class Deploy {
         pre = new int[N];
         dist = new int[N];
         visited = new boolean[N];
-        T_list = new ArrayList<Integer>();
-        T_cost = new ArrayList<Integer>();
         //********************************************//
-        for (int i = 4; i < lines - num_T - 1; i++) {
-            String[] str = graphContent[i].split("\\s");
-            int a = Integer.valueOf(str[0]);
-            int b = Integer.valueOf(str[1]);
-            int c = Integer.valueOf(str[2]);
-            int d = Integer.valueOf(str[3]);
+        for (String str:link) {
+            String[] s = str.split("\\s");
+            int a = Integer.valueOf(s[0]);
+            int b = Integer.valueOf(s[1]);
+            int c = Integer.valueOf(s[2]);
+            int d = Integer.valueOf(s[3]);
             addedge(a, b, c, d);
             addedge(b, a, c, d);
         }
-        for (int i = lines - num_T; i < lines; i++) {
-            String[] str = graphContent[i].split("\\s");
-            int a = Integer.valueOf(str[1]);
-            int b = Integer.valueOf(str[2]);
-            T_list.add(a);
-            T_cost.add(b);
-        }
-
-
-    }
-
-    public static evaluate calC(List<Integer> server) {
-
-
-        e = new edge[EE];
-        en = 0;
-        N = NN + 2;
-        head = new int[N];
-        for (int i = 0; i < N; i++) {
-            head[i] = -1;
-        }
-        pre = new int[N];
-        dist = new int[N];
-        visited = new boolean[N];
-
         //添加超级原点,汇点
         S = NN + 0;   //超级原点
         T = NN + 1;  //超级汇点
@@ -227,41 +194,15 @@ public class Deploy {
         return res;
 
     }
-
-    private static String listToString(List list) {
-        String res = list.get(0) + "";
-        for (int i = 1; i < list.size(); i++) {
-            res += " " + list.get(i);
-        }
-        return res;
-    }
-
-    private static String[] changeResult(List<List> resultgraph) {
-
-        int len = resultgraph.size();
-
-        String[] result = new String[len + 2];
-        result[0] = len + "";
-        result[1] = "";
-        for (int i = 0; i < len; i++) {
-            result[i + 2] = listToString(resultgraph.get(i));
-        }
-
-        return result;
-    }
-
-
     public static String[] deployServer(String[] graphContent) {
-
-        readData(graphContent);
-
-        GeneticAlgorithm geneticAlgorithm = new GeneticAlgorithm(100, 20);
-        evaluate calculate = geneticAlgorithm.calculate();
-//        ArrayList<List> resultgraph = calculate.list;
-
-//        return changeResult(null);
-        return null;
-
+            readData(graphContent);
+            GeneticAlgorithm geneticAlgorithm = new GeneticAlgorithm(100,50);
+            evaluate calculate = geneticAlgorithm.calculate();
+            System.out.println(calculate.error);
+            System.out.println(calculate.cost);
+            System.out.println(calculate.list);
+            return null;
     }
+
 }
 
